KC-6914 #comment Refactored visitor endpoint & added GET method with latest defination
