# api/App/Controller/VisitorsController.php
@@ -1,95 +1,127 @@
 <?php
 namespace Api\Controller;
 
+use \Nocarrier\Hal;
 use \Core\Domain\Factory\AdminFactory;
 use \Core\Service\Errors;
 
 class VisitorsController extends ApiBaseController
 {
-    public function updateVisitor()
+    public function getVisitor($id)
     {
-        $response = array();
-        $visitorsData = json_decode($this->app->request->getBody(), true);
-        if (!is_array($visitorsData) || empty($visitorsData)) {
+        $conditions = array('id' => $id);
+        $visitor = AdminFactory::getVisitor()->execute($conditions);
+        if($visitor instanceof Errors) {
             $this->app->response->setStatus(405);
-            echo json_encode(array('msg'=>'Invalid Parameters.'));
+            echo json_encode(array('msg'=>'Invalid Id'));
             return;
         }
-
-        foreach ($visitorsData as $visitorParams) {
-            if (!isset($visitorParams['event']) || empty($visitorParams['event'])) {
-                $this->app->response->setStatus(405);
-                echo json_encode(array('msg'=>'Event Required'));
-                return;
-            }
-            if (!isset($visitorParams['email']) || empty($visitorParams['email'])) {
-                $this->app->response->setStatus(405);
-                echo json_encode(array('msg'=>'Email Required'));
-                return;
-            }
-            $conditions = array('email' => $visitorParams['email']);
-            $visitor = AdminFactory::getVisitor()->execute($conditions);
-            if($visitor instanceof Errors) {
-                $this->app->response->setStatus(405);
-                echo json_encode(array('msg'=>'Invalid Email'));
-                return;
-            }
-            $params = $this->createParamsData($visitor, $visitorParams);
-            $result = AdminFactory::updateVisitors()->execute($visitor, $params);
-            if($result instanceof Errors) {
-                $this->app->response->setStatus(405);
-                $response = $result->getErrorsAll();
-            } else {
-                $response[$result->getEmail()] = array(
-                    'open' => $result->getMailOpenCount(),
-                    'click' => $result->getMailClickCount(),
-                    'soft_bounce' => $result->getMailSoftBounceCount(),
-                    'hard_bounce' => $result->getMailHardBounceCount()
-                );
-            }
-        }
-        echo json_encode($response);
-        return;
+        echo $this->generateVisitorJsonData($visitor);
     }
 
-    private function createParamsData($visitor, $visitorParams)
+    public function updateVisitor($id)
     {
-        $params = array();
-        switch ($visitorParams['event']) {
-            case 'open':
-                if (!isset($visitorParams['timeStamp']) || !is_numeric($visitorParams['timeStamp'])) {
-                    $this->app->halt(405, json_encode(array('msg'=>'Invalid mail open Timestamp')));
-                }
-                $openCount = (int) $visitor->getMailOpenCount();
-                $params['mailOpenCount'] = $openCount + 1;
-                $openDate = new \DateTime();
-                $openDate->setTimestamp($visitorParams['timeStamp']);
-                $params['lastEmailOpenDate'] = $openDate;
-                break;
-            case 'click':
-                $clickCount = (int) $visitor->getMailClickCount();
-                $params['mailClickCount'] = $clickCount + 1;
-                break;
-            case 'soft_bounce':
-                $softBounceCount = (int) $visitor->getMailSoftBounceCount();
-                if ($softBounceCount >= 5) {
-                    $params['active'] = 0;
-                    $params['inactiveStatusReason'] = 'Soft Bounce';
-                }
-                $params['mailSoftBounceCount'] = $softBounceCount + 1;
-                break;
-            case 'hard_bounce':
-                $hardBounceCount = (int) $visitor->getMailHardBounceCount();
-                if ($hardBounceCount >= 2) {
-                    $params['active'] = 0;
-                    $params['inactiveStatusReason'] = 'Hard Bounce';
-                }
-                $params['mailHardBounceCount'] = $hardBounceCount + 1;
-                break;
-            default:
-                $this->app->halt(405, json_encode(array('msg'=>'Invalid Event')));
-                break;
+        $params = json_decode($this->app->request->getBody(), true);
+        $conditions = array('id' => $id);
+        $visitor = AdminFactory::getVisitor()->execute($conditions);
+        if($visitor instanceof Errors) {
+            $this->app->response->setStatus(405);
+            echo json_encode(array('msg'=>'Invalid Id'));
+            return;
+        }
+        $params = $this->formatInput($params);
+        $result = AdminFactory::updateVisitors()->execute($visitor, $params);
+        if($result instanceof Errors) {
+            $this->app->response->setStatus(405);
+            $response = $result->getErrorsAll();
+            $response = json_encode($response);
+        } else {
+            $response = $this->generateVisitorJsonData($result);
+        }
+        echo $response;
+    }
+
+    private  function formatInput($params)
+    {
+        if (isset($params['active'])) {
+            $params['active'] = ( $params['active'] === 'Yes' ? 1 : ( $params['active'] === 'No' ? 0 : null ));
+            if(true === is_null($params['active'])) unset($params['active']);
+        }
+        if (isset($params['changePasswordRequest'])) {
+            $params['changePasswordRequest'] = ( $params['changePasswordRequest'] === 'Yes' ? 1 : ( $params['changePasswordRequest'] === 'No' ? 0 : null ));
+            if(true === is_null($params['changePasswordRequest'])) unset($params['changePasswordRequest']);
+        }
+        if (isset($params['codeAlert'])) {
+            $params['codeAlert'] = ( $params['codeAlert'] === 'Yes' ? 1 : ( $params['codeAlert'] === 'No' ? 0 : null ));
+            if(true === is_null($params['codeAlert'])) unset($params['codeAlert']);
+        }
+        if (isset($params['deleted'])) {
+            $params['deleted'] = ( $params['deleted'] === 'Yes' ? 1 : ( $params['deleted'] === 'No' ? 0 : null ));
+            if(true === is_null($params['deleted'])) unset($params['deleted']);
+        }
+        if (isset($params['fashionNewsLetter'])) {
+            $params['fashionNewsLetter'] = ( $params['fashionNewsLetter'] === 'Yes' ? 1 : ( $params['fashionNewsLetter'] === 'No' ? 0 : null ));
+            if(true === is_null($params['fashionNewsLetter'])) unset($params['fashionNewsLetter']);
+        }
+        if (isset($params['gender'])) {
+            $params['gender'] = ( $params['gender'] === 'Female' ? 1 : ( $params['gender'] === 'Male' ? 0 : null ));
+            if(true === is_null($params['gender'])) unset($params['gender']);
+        }
+        if (isset($params['status'])) {
+            $params['status'] = ( $params['status'] === 'Online' ? 1 : ( $params['status'] === 'Offline' ? 0 : null ));
+            if(true === is_null($params['status'])) unset($params['status']);
+        }
+        if (isset($params['travelNewsLetter'])) {
+            $params['travelNewsLetter'] = ( $params['travelNewsLetter'] === 'Yes' ? 1 : ( $params['travelNewsLetter'] === 'No' ? 0 : null ));
+            if(true === is_null($params['travelNewsLetter'])) unset($params['travelNewsLetter']);
+        }
+        if (isset($params['weeklyNewsLetter'])) {
+            $params['weeklyNewsLetter'] = ( $params['weeklyNewsLetter'] === 'Yes' ? 1 : ( $params['weeklyNewsLetter'] === 'No' ? 0 : null ));
+            if(true === is_null($params['weeklyNewsLetter'])) unset($params['weeklyNewsLetter']);
         }
         return $params;
+    }
+
+    private function generateVisitorJsonData($visitor)
+    {
+        $lastEmailOpenDate = $visitor->getLastEmailOpenDate();
+        $currentLogIn = $visitor->getCurrentLogIn();
+        $dateOfBirth = $visitor->getDateOfBirth();
+        $lastLogIn = $visitor->getLastLogIn();
+        $codeAlertSendDate = $visitor->getCodeAlertSendDate();
+
+        $visitorData = array(
+            'email' => $visitor->getEmail(),
+            'firstName' => $visitor->getFirstName(),
+            'lastName' => $visitor->getLastName(),
+            'mailOpenCount' => $visitor->getMailOpenCount(),
+            'lastEmailOpenDate' => !empty($lastEmailOpenDate) ? $lastEmailOpenDate->format('Y-m-d H:i:s') : '',
+            'mailClickCount' => $visitor->getMailClickCount(),
+            'mailSoftBounceCount' => $visitor->getMailSoftBounceCount(),
+            'mailHardBounceCount' => $visitor->getMailHardBounceCount(),
+            'active' => (1 === $visitor->getActive()) ? 'Yes' : 'No',
+            'inactiveStatusReason' => $visitor->getInactiveStatusReason(),
+            'activeCodeId' => $visitor->getActiveCodeId(),
+            'changePasswordRequest' => (1 === $visitor->getChangePasswordRequest()) ? 'Yes' : 'No',
+            'codeAlert' => (1 === $visitor->getCodeAlert()) ? 'Yes' : 'No',
+            'codeAlertSendDate' => !empty($codeAlertSendDate) ? $codeAlertSendDate->format('Y-m-d H:i:s') : '',
+            'currentLogIn' => !empty($currentLogIn) ? $currentLogIn->format('Y-m-d H:i:s') : '',
+            'dateOfBirth' => !empty($dateOfBirth) ? $dateOfBirth->format('Y-m-d') : '',
+            'deleted' => (1 === $visitor->getDeleted()) ? 'Yes' : 'No',
+            'fashionNewsLetter' => (1 === $visitor->getFashionNewsLetter()) ? 'Yes' : 'No',
+            'gender' => (1 === $visitor->getGender()) ? 'Female' : 'Male',
+            'interested' => $visitor->getInterested(),
+            'lastLogIn' => !empty($lastLogIn) ? $lastLogIn->format('Y-m-d H:i:s') : '',
+            'password' => $visitor->getPassword(),
+            'postalCode' => $visitor->getPostalCode(),
+            'profileImg' => $visitor->getProfileImg(),
+            'pwd' => $visitor->getPwd(),
+            'status' => (1 === $visitor->getStatus()) ? 'Online' : 'Offline',
+            'travelNewsLetter' => (1 === $visitor->getTravelNewsLetter()) ? 'Yes' : 'No',
+            'weeklyNewsLetter' => (1 === $visitor->getWeeklyNewsLetter()) ? 'Yes' : 'No',
+            'username' => $visitor->getUsername()
+        );
+        $shop = new Hal('/visitors/'.$visitor->getId(), $visitorData);
+        return $shop->asJson();
     }
 }
